# Bevy-Game

./: Cargo.toml  README.md  notes.txt  settings.json
World/: map.txt
src/: block_id.rs  constants.rs  main.rs  systems.rs
src/game/: mod.rs  systems.rs
src/game/entities/: components.rs  mod.rs
src/game/entities/player/: components.rs  mod.rs  systems.rs
src/game/map/: components.rs  mod.rs  systems.rs
src/game/player/: mod.rs  systems.rs
src/game/skills/: skill_proj.rs  skills.rs
src/map/: components.rs  systems.rs
src/player/: components.rs  mod.rs  skills.rs  systems.rs
src/settings/: components.rs  mod.rs  systems.rs
src/skills/: mod.rs  skill_proj.rs  skills.rs
world/: map.txt
