[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = "0.12.0"
bevy_rapier2d = "0.23.0"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
bevy_simple_tilemap = "0.13.0"
#bevy_ecs_tilemap = "0.11.1"
#bevy-inspector-egui = "0.21.0"

